# Research-Design

./: .gitignore  README.md
Programma/: CMakeLists.txt  CollectionGenerators.cpp  CollectionGenerators.h  FindTests.cpp  FindTests.h  FoldTests.cpp  FoldTests.h  MapTests.cpp  MapTests.h  SortTests.cpp  SortTests.h  TestResults.h  TestSubjects.cpp  TestSubjects.h  TransformTests.cpp  TransformTests.h  main.cpp  sortTests.cpp  sortTests.h
